--- a/style.css
+++ b/style.css
@@ -1,1 +1,126 @@
 
+body {
+    background-color:darkslategray;
+    text-align: center;
+    /* margin: auto; */
+}
+h1{
+    text-align: center;
+    
+    color:aquamarine;
+    font-style: oblique;
+    font-size: 55px;
+    font-family:Arial;
+    letter-spacing: 5px;
+}
+#movies-grid {
+    display: grid;
+    /* grid-template-columns: 1fr 1fr 1fr 1fr ; */
+    grid-template-columns: repeat(auto-fit, minmax(250px,1fr));
+    grid-gap: 20px;
+    margin-left: 30px;
+}
+#search{
+    background-color:aliceblue;
+    margin-right: 12px;
+    padding: 7px;
+    padding-bottom: 9px
+}
+.movie-title , .movie-votes
+{
+    color:aquamarine;
+}
+.image {
+    width: 100%;
+    height: auto;
+    display: block;
+    border-radius: 10px;
+}
+
+#popup {
+    background-color: rgb(188, 184, 184);
+    display:none;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    position: fixed;
+    top:0;
+    left:0;
+}
+
+#close-popup-div{
+    width:100%;
+    height:80px ;
+}
+
+#close-popup {
+    float: right;
+    color: white;
+    background-color: black;
+    border-radius: 10%;
+    width: 80px;
+    height: 30px;
+    margin-top: 10px;
+    margin-right: 10px;
+}
+
+#movie-card-image-div {
+    margin-top: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: auto;
+    width: 400px;
+    height:600px;
+    justify-content: center;
+    border-radius: 10px;
+    background-color: aqua;
+}
+
+#overview-image
+{
+    width: inherit;
+    height: inherit;
+    display: block;
+    border-radius: inherit;
+    box-shadow: 10px 10px 5px rgb(60, 48, 48);
+}
+
+#overview-text {
+    margin-top: 60px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: auto;
+    width: 50%;
+    justify-content: center;
+}
+#load-more-movies-div{
+    width:100%;
+    height:80px ;
+    margin-top: 50px;
+}
+#load-more-movies-btn{
+    align-content: center;
+    color:aliceblue;
+    padding: 10px;
+    background-color: black;
+    border-radius: 10%;
+
+}
+#search-input{
+    height:30px;
+    width: 245px;
+}
+.button{
+    color:white;
+    padding: 10px;
+    background-color: black;
+    border-radius: 10%;
+}
+
+#prev-btn
+{
+    display: none;
+    align-content: center;
+    margin-bottom: 30px;
+    /* margin-top: 100px; */
+}
